tests/spec/non_conformant/errors/import/url/mixin/control_if/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/url/mixin/control-if"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("control-if")
}

mod outside;
